--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@
 
 .hamburger-menu .bar {
     height: 3px;
-    width: 100%;
+    width: 30px;
     background-color: #fff;
     border-radius: 10px;
 }
