--- a/styles.css
+++ b/styles.css
@@ -60,8 +60,12 @@
 .hamburger-menu .bar {
     height: 3px;
     width: 30px;
+    display: flex;
+    align-items: start;
+    justify-content: start;
     background-color: #fff;
     border-radius: 10px;
+    margin-left: 0;
 }
 
 /* Dropdown Menu */
